# dssv-consult-agent-playground

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.continue/agents/: consult-assistant.yaml
.pi/: models.example.json  settings.json
cli/: README.md  _common.py  get-consult-detail.py  list-recent-consults.py  search-consults.py  summarize-similar-requests.py
src/consult_agent/: __init__.py  config.py  db.py  embed.py  ingest.py  mcp_server.py  normalize.py  ollama.py  retrieval.py
