[project]
name = "consult-assistant"
version = "0.1.0"
description = "Local, agentic triage assistant for data science consult requests (Ollama + MCP + Continue)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",   # read the source .xlsx
    "sqlite-vec>=0.1.6",  # vector search inside the SQLite file
    "httpx>=0.27",     # talk to the local Ollama HTTP API
    "mcp>=1.2",        # official MCP SDK for the tool server
]

[project.scripts]
consult-ingest = "consult_agent.ingest:main"
consult-embed = "consult_agent.embed:main"
consult-mcp = "consult_agent.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consult_agent"]
